--- a/myCss.css
+++ b/myCss.css
@@ -6,7 +6,7 @@
 /* Start header */
 
 header {
-	background: url(http://hdwallpaper.info/wp-content/uploads/bfi_thumb/2560x1440-wallpaper-for-mac-n2ob0qmemhldjz48bx6xpa4jmkflajutgkxq4mxoy0.jpg
+	background: url(http://hdwallpaper.info/wp-content/uploads/bfi_thumb/2560x1440-wallpaper-for-mac-n2ob0qmemhldjz48bx6xpa4jmkflajutgkxq4mxoy0.jpg);
 	min-height: 500px;
 	position: relative;
 	text-align: center
