--- a/myCss.css
+++ b/myCss.css
@@ -3,6 +3,75 @@
 	box-sizing: border-box
 }
 
+a {
+	text-decoration: none
+}
+
+/* Start navbar */
+
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #eee;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	text-align: center;
+	display: none;
+	opacity: .9;
+	overflow: auto;
+}
+
+nav > i {
+	cursor: pointer;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: red;
+}
+
+nav ul {
+	width: 600px;
+	margin: 50px auto;
+}
+
+nav ul a li {
+	list-style: none;
+	font-size: 300%;
+	color: #715a5a;
+	width: 100%;
+	padding: 10px;
+	margin: 10px 0;
+	-webkit-transition: 1s;
+	transition: 1s;
+	border: solid 10px
+}
+
+nav ul a li:hover {
+	color: red;
+	border: dashed 3px
+}
+
+@media (max-width: 767px) {
+	nav ul {
+		width: 300px !important;
+		position: absolute;
+		left: -15px
+	}
+
+	nav ul a li {
+		font-size: 150%;
+		padding: 10px;
+		margin: 10px auto;
+
+	}
+
+}
+
+
+/* End navbar */
+
 /* Start header */
 
 header {
