--- a/myCss.css
+++ b/myCss.css
@@ -100,6 +100,15 @@ header .overlay h1 {
 
 }
 
+header .overlay p {
+	font-size: 200%;
+	display: inline-block;
+	color: #a54107;
+	text-shadow: 0px 0px 8px #fbcaca;
+	font-weight: 600;
+	text-transform: capitalize
+}
+
 header .overlay h1::before {
 	color: #c96507;
 }
