--- a/myCss.css
+++ b/myCss.css
@@ -104,7 +104,8 @@ header .overlay p {
 	font-size: 150%;
 	display: inline-block;
 	color: #e3e3c3;
-	text-shadow: 0px 0px 5px #000
+	text-shadow: 0px 0px 5px #000;
+	font-family: 'Reem Kufi', sans-serif
 }
 
 header .overlay h1::before {
