--- a/myCss.css
+++ b/myCss.css
@@ -128,7 +128,7 @@ header {
 	width: 100%;
 	height: 568px;
 	background: #647077;
-	background-image: url(../images/logo.png);
+	background-image: url(https://lagooncarrental.is/kerfi/wp-content/uploads/2016/08/3_Lagoon_Kain-Mellowship_Wander___Boy2-1500x800.jpg);
 	background-size: cover;
 	color: #fff;
 	padding: 70px 0;
