--- a/myCss.css
+++ b/myCss.css
@@ -129,7 +129,7 @@ header {
 	width: 100%;
 	height: 568px;
 	background: #647077;
-	background-image: url(../images/logo.png);
+	background-image: url(http://alamnature.com/wp-content/uploads/2016/09/Mountains-Nature-Mountain-Landscape-Green-Desktop-Background.jpg);
 	background-size: cover;
 	color: #fff;
 	padding: 70px 0;
