--- a/myCss.css
+++ b/myCss.css
@@ -130,6 +130,7 @@ header {
 	height: 568px;
 	background: #647077;
 	background-image: url(http://alamnature.com/wp-content/uploads/2016/09/Mountains-Nature-Mountain-Landscape-Green-Desktop-Background.jpg);
+	background-blend-mode: soft-light;
 	background-size: cover;
 	color: #fff;
 	padding: 70px 0;
