--- a/myCss.css
+++ b/myCss.css
@@ -67,7 +67,7 @@ nav i {
 	width: 100%;
 	height: 100%;
 	left: 0;
-	transform: translateY(-900px);
+	transform: translateY(-875px);
 	opacity: .96;
 	padding-top: 70px;
 }
@@ -134,7 +134,7 @@ header {
 	background-size: cover;
 	color: #fff;
 	padding: 70px 0;
-	margin-bottom: 50px
+	margin-bottom: 50px;
 }
 
 header .flex-center {
@@ -206,7 +206,6 @@ footer {
 }
 
 /* End Footer */
-
 
 /* --------------------------------------------------------------- */
 
