--- a/myCss.css
+++ b/myCss.css
@@ -2,11 +2,11 @@
 
 * {
 	-webkit-box-sizing: border-box;
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 body {
-	background: #F2F2F2
+	background: #F2F2F2;
 }
 
 a {
@@ -27,12 +27,19 @@ nav {
 	background-color: #414749;
 	opacity: .95;
 	text-align: center;
-	z-index: 1
+	z-index: 4
 }
 
 .logo {
 	display: block;
-	margin-top: 20px
+	margin-top: 20px;
+	color: #fff;
+	font-size: 150%;
+	font-family: 'Montserrat', sans-serif;
+}
+
+nav .logo::before {
+	content: "mustafamax"
 }
 
 nav a {
@@ -53,14 +60,13 @@ nav i {
 	opacity: .95;
 	display: flex;
 	align-items: center;
-	z-index: 2;
+	z-index: 5;
 }
 
 .nav-list i {
 	color: #fff;
 	float: right;
 	cursor: pointer;
-	z-index: 0
 }
 
 /* Link Navbar Horesontil */
@@ -101,6 +107,7 @@ nav i {
 	transform: translateY(-900px);
 	opacity: .96;
 	padding-top: 70px;
+	z-index: 2
 }
 
 .slide-nav .link-my hr {
@@ -158,21 +165,26 @@ nav i {
 
 header {
 	width: 100%;
-	height: 568px;
 	background: #647077;
 	background-image: url(http://alamnature.com/wp-content/uploads/2016/09/Mountains-Nature-Mountain-Landscape-Green-Desktop-Background.jpg);
 	background-blend-mode: soft-light;
 	background-size: cover;
+	background-attachment: fixed;
 	color: #fff;
-	padding: 70px 0;
 	margin-bottom: 50px;
+	text-align: center;
 }
 
-header .flex-center {
+.container-header {
 	height: 100%;
 	display: flex;
-	align-items: center;
-	text-align: center
+	flex-wrap: wrap;
+	align-content: space-around
+}
+
+.container-header div {
+	width: 100%;
+	max-height: 300px;
 }
 
 header h1 {
@@ -181,16 +193,40 @@ header h1 {
 	font-weight: 300
 }
 
+header a i {
+	position: relative;
+	color: #fff;
+	animation: myDown 2s linear infinite;
+}
+
+@keyframes myDown {
+	0% {
+		opacity: .2;
+		transform: translateY(0px)
+	}
+	50% {
+		opacity: 1;
+		transform: translateY(15px)
+	}
+	100% {
+		opacity: .2;
+		transform: translateY(0px)
+	}
+}
 
 
 /* End Header */
 
 /* Start Featured articles */
 
+.article-featured {
+	padding-top: 100px
+}
+
 .article-featured section {
 	height: 100%;
 	text-align: center;
-	padding: 0 20px;
+	padding: 0 20px 100px;
 }
 
 .article-featured section a {
@@ -199,7 +235,8 @@ header h1 {
 
 .article-featured section a img {
 	width: 165px;
-	height: 165px
+	height: 165px;
+	display: inline-block
 }
 
 .article-featured section a h1 {
@@ -216,12 +253,9 @@ header h1 {
 
 .ads {
 	background: #87A1AB;
-	padding: 20px 0
-}
-
-.ads img {
+	padding: 20px 0;
 	width: 100%;
-	height: auto
+	height: 100%
 }
 
 /* End ads */
@@ -230,11 +264,8 @@ header h1 {
 
 .youtube {
 	background: #87A1AB;
-	padding: 20px 0
-}
-
-.youtube iframe {
-	width: 100%
+	padding: 20px 0;
+	text-align: center
 }
 
 /* End youtube */
@@ -258,11 +289,11 @@ footer {
 	height: 100%;
 	background-color: #ccc;
 	top: 0;
-	z-index: 5;
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	font: 60px/0 'Great Vibes', cursive;
+	z-index: 4
 }
 
 .page-load div:first-of-type {
@@ -291,7 +322,8 @@ footer {
 	border-bottom: solid 6px #cd570e;
 	border-left: solid 6px #494949;
 	transition: 3s;
-	animation: search 1s linear infinite
+	animation: search 1s linear infinite;
+	z-index: 10
 }
 
 @keyframes search {
@@ -301,6 +333,28 @@ footer {
 }
 
 /* End Wait for the page to load */
+
+/* Start scroll top */
+
+.scroll-top {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	margin: 30px 20px;
+	display: none;
+}
+
+.scroll-top a {
+	color: #444;
+}
+
+.scroll-top a:hover {
+	color: #222
+}
+
+/* End scroll top */
+
+
 
 /* --------------------------------------------------------------- */
 
@@ -322,6 +376,13 @@ footer {
 	}
 	.slide-nav {
 		display: none
+	}
+
+	.container-header {
+		height: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		align-content: space-between
 	}
 }
 
@@ -352,7 +413,8 @@ footer {
 }
 
 .circle {
-	border-radius: 50%
+	border-radius: 50%;
+	border: solid 1px #ccc
 }
 
 .clearfix {
@@ -390,6 +452,12 @@ footer {
 .center {
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
+}
+
+.center-center {
+	display: flex;
+	justify-content: center;
 	align-items: center;
 }
 
