--- a/Responsive.css
+++ b/Responsive.css
@@ -1,264 +1,218 @@
+.container {
+	padding: 0 5%
+}
+
+.container-content {
+	padding: 3% 1%;
+}
+
+.row {
+	display: inline-flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%
+}
+
+.clear {
+	clear: both
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.center-between {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 /* Page splitting code on 12 columns */
 
-/* Start mobile & tablet rules */
-
-@media (max-width: 767px) {
-	.col-xs-1 {
+@media (min-width: 300px) {
+	.col-s-1 {
 		width: 8.33%;
 		float: left;
 	}
 
-	.col-xs-2 {
+	.col-s-2 {
 		width: 16.66%;
 		float: left;
 	}
 
-	.col-xs-3 {
+	.col-s-3 {
 		width: 25%;
 		float: left;
 	}
 
-	.col-xs-4 {
+	.col-s-4 {
 		width: 33.33%;
 		float: left;
 	}
 
-	.col-xs-5 {
+	.col-s-5 {
 		width: 41.66%;
 		float: left;
 	}
 
-	.col-xs-6 {
+	.col-s-6 {
 		width: 50%;
 		float: left;
 	}
 
-	.col-xs-7 {
+	.col-s-7 {
 		width: 58.33%;
 		float: left;
 	}
 
-	.col-xs-8 {
+	.col-s-8 {
 		width: 66.66%;
 		float: left;
 	}
 
-	.col-xs-9 {
+	.col-s-9 {
 		width: 75%;
 		float: left;
 	}
 
-	.col-xs-10 {
+	.col-s-10 {
 		width: 83.33%;
 		float: left;
 	}
 
-	.col-xs-11 {
+	.col-s-11 {
 		width: 91.66%;
 		float: left;
 	}
 
-	.col-xs-12 {
+	.col-s-12 {
 		width: 100%;
 		float: left;
 	}
 }
-/* End mobile & tablet rules */
-
-/* Start small rules */
 
 @media (min-width: 768px) {
-	.col-sm-1 {
+	.col-m-1 {
 		width: 8.33%;
 		float: left;
 	}
 
-	.col-sm-2 {
+	.col-m-2 {
 		width: 16.66%;
 		float: left;
 	}
 
-	.col-sm-3 {
+	.col-m-3 {
 		width: 25%;
 		float: left;
 	}
 
-	.col-sm-4 {
+	.col-m-4 {
 		width: 33.33%;
 		float: left;
 	}
 
-	.col-sm-5 {
+	.col-m-5 {
 		width: 41.66%;
 		float: left;
 	}
 
-	.col-sm-6 {
+	.col-m-6 {
 		width: 50%;
 		float: left;
 	}
 
-	.col-sm-7 {
+	.col-m-7 {
 		width: 58.33%;
 		float: left;
 	}
 
-	.col-sm-8 {
+	.col-m-8 {
 		width: 66.66%;
 		float: left;
 	}
 
-	.col-sm-9 {
+	.col-m-9 {
 		width: 75%;
 		float: left;
 	}
 
-	.col-sm-10 {
+	.col-m-10 {
 		width: 83.33%;
 		float: left;
 	}
 
-	.col-sm-11 {
+	.col-m-11 {
 		width: 91.66%;
 		float: left;
 	}
 
-	.col-sm-12 {
+	.col-m-12 {
 		width: 100%;
 		float: left;
 	}
 }
 
-/* End small rules */
-
-/* Start medium rules */
-
-@media (min-width: 992px) {
-	.col-md-1 {
+@media (min-width: 1250px) {
+	.col-l-1 {
 		width: 8.33%;
 		float: left;
 	}
 
-	.col-md-2 {
+	.col-l-2 {
 		width: 16.66%;
 		float: left;
 	}
 
-	.col-md-3 {
+	.col-l-3 {
 		width: 25%;
 		float: left;
 	}
 
-	.col-md-4 {
+	.col-l-4 {
 		width: 33.33%;
 		float: left;
 	}
 
-	.col-md-5 {
+	.col-l-5 {
 		width: 41.66%;
 		float: left;
 	}
 
-	.col-md-6 {
+	.col-l-6 {
 		width: 50%;
 		float: left;
 	}
 
-	.col-md-7 {
+	.col-l-7 {
 		width: 58.33%;
 		float: left;
 	}
 
-	.col-md-8 {
+	.col-l-8 {
 		width: 66.66%;
 		float: left;
 	}
 
-	.col-md-9 {
+	.col-l-9 {
 		width: 75%;
 		float: left;
 	}
 
-	.col-md-10 {
+	.col-l-10 {
 		width: 83.33%;
 		float: left;
 	}
 
-	.col-md-11 {
+	.col-l-11 {
 		width: 91.66%;
 		float: left;
 	}
 
-	.col-md-12 {
+	.col-l-12 {
 		width: 100%;
 		float: left;
 	}
 }
-
-/* End medium rules */
-
-/* Start large rules */
-
-@media (min-width: 1200px) {
-	.col-lg-1 {
-		width: 8.33%;
-		float: left;
-	}
-
-	.col-lg-2 {
-		width: 16.66%;
-		float: left;
-	}
-
-	.col-lg-3 {
-		width: 25%;
-		float: left;
-	}
-
-	.col-lg-4 {
-		width: 33.33%;
-		float: left;
-	}
-
-	.col-lg-5 {
-		width: 41.66%;
-		float: left;
-	}
-
-	.col-lg-6 {
-		width: 50%;
-		float: left;
-	}
-
-	.col-lg-7 {
-		width: 58.33%;
-		float: left;
-	}
-
-	.col-lg-8 {
-		width: 66.66%;
-		float: left;
-	}
-
-	.col-lg-9 {
-		width: 75%;
-		float: left;
-	}
-
-	.col-lg-10 {
-		width: 83.33%;
-		float: left;
-	}
-
-	.col-lg-11 {
-		width: 91.66%;
-		float: left;
-	}
-
-	.col-lg-12 {
-		width: 100%;
-		float: left;
-	}
-}
-
-/* End large rules */
